# Engine

./: .clangd  .gitignore  CMakeLists.txt  README.md  VoxelEngine.slnx  imgui.ini  modding_plan.md
VoxelEngine/: MAIN.cpp  VoxelEngine.vcxproj  VoxelEngine.vcxproj.filters  imgui.ini  shader.vert
src/: BlockTypes.cpp  BlockTypes.h  CMakeLists.txt  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  CoordUtils.h  EBO.h  Inventory.cpp  ItemModelGenerator.cpp  JobSystem.cpp  JobSystem.h  MAIN.cpp  MainGlobals.cpp  MainGlobals.h  Meshing.cpp  Meshing.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h  Raycast.cpp  RegionManager.cpp  RegionManager.h  ShaderClass.h  SurvivalSystem.cpp  TerrainGenerator.cpp  TerrainGenerator.h  VAO.cpp  VAO.h  VBO.h  WaterSimulator.cpp  WaterSimulator.h  default.frag  default.vert  main.cpp  particle.frag  particle.vert  water.frag  (+1 more)
src/audio/: AudioEngine.cpp  AudioEngine.h  stb_vorbis_impl.c
src/core/: MainGlobals.cpp  MainGlobals.h  Renderer.cpp  Renderer.h  WorldSession.cpp  main.cpp
src/gameplay/: Player.cpp  Player.h  Raycast.cpp
src/rendering/: Frustum.cpp  Frustum.h  ItemModelGenerator.h  Meshing.cpp  Meshing.h  ToolModelGenerator.h
src/rendering/opengl/: EBO.h  GLCompat.h  ShaderClass.cpp  ShaderClass.h  VAO.h  VBO.h
src/shaders/: default.frag  default.vert
src/ui/: DebugUI.cpp  MainMenu.cpp  MainMenu.h
src/utils/: BlockTypes.cpp  BlockTypes.h  JobSystem.cpp  JobSystem.h
src/world/: Biome.cpp  Biome.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  RegionManager.cpp  TerrainGenerator.cpp  TerrainGenerator.h
(+4 files in other folders)
